added animate css, css styling to navbar, css to other areas of page

--- a/client/src/components/Footer/style.css
+++ b/client/src/components/Footer/style.css
@@ -1,5 +1,5 @@
 .footer {
     background-color:gray;
-    border-top: 5px solid teal;
+    border-top: 3px solid rgba(255,255,255,.5);
     height: 5%;
 }
