--- a/client/src/components/Grid/style.css
+++ b/client/src/components/Grid/style.css
@@ -1,5 +1,5 @@
-.container-fluid {
+/* .container-fluid {
     min-height: 100%;
     background-image: url(./images/IMG_9209.JPG);
     background-size: cover;
-}
+} */
