--- a/client/src/components/Nav/style.css
+++ b/client/src/components/Nav/style.css
@@ -1,5 +1,47 @@
-.cloud {  
-    background: url(./images/beautiful-cloud-background.jpg) !important;
-    background-size: cover !important;
-    border-bottom: 5px solid rgba(0,0,0,.685);
-}
+
+
+.navbar {
+    display: flex;
+    /* justify-content: center; */
+    align-items: center;
+    border-radius: 4px;
+    /* background-color: #eceff1; */
+    border-bottom: 3px solid rgba(255,255,255,.5);
+  }
+  
+  .navbar__link {
+    margin: .5em;
+    font-size: 1.5em;
+    font-family: 'Roboto', sans-serif;
+    cursor: pointer;
+    text-decoration: none;
+    letter-spacing: .3em;
+    text-indent: .3em;
+    color: #181818;
+    border-bottom: 3px solid transparent;
+  }
+
+  .navbar__button {
+    margin: .5em;
+    font-size: 1em;
+    font-family: 'Roboto', sans-serif;
+    cursor: pointer;
+    text-decoration: none;
+    letter-spacing: .2em;
+    text-indent: .3em;
+    color: #181818;
+    border-bottom: 3px solid transparent;
+    float: right;
+  }
+  
+  .navbar__link:hover {
+    transform: translateY(-2px);
+    background-color: rgba(255,255,0,.5);
+    color: black;
+    font-weight: bold;
+  }
+  
+  .navbar__link--active {
+    border-bottom: 3px solid #29b6f6;
+    transition: border-bottom .5s ease-in-out;
+  }
