--- a/client/src/components/Footer/style.css
+++ b/client/src/components/Footer/style.css
@@ -1,5 +1,5 @@
 .footer {
-    background-color:gray;
-    border-top: 3px solid rgba(255,255,255,.5);
-    height: 5%;
+  background-color: rgba(128, 128, 128, 0.75);
+  border-top: 3px solid rgba(255, 255, 255, 0.5);
+  height: 5%;
 }
