messed with font-types and styling for contact form

--- a/client/src/components/ContactModal/style.css
+++ b/client/src/components/ContactModal/style.css
@@ -4,6 +4,11 @@
   color: rgba(255, 255, 255);
 }
 
-#contactContainer {
-  background-color: rgba(0, 0, 0, 0.8);
+.contactContainer {
+  background-color: rgba(75, 116, 204, 0.7);
+}
+
+.modal-title {
+  font-family: "Helvetica", sans-serif;
+  font-size: 30px;
 }
