--- a/client/src/components/SideNav/style.css
+++ b/client/src/components/SideNav/style.css
@@ -5,7 +5,7 @@
   padding: 5px;
   top: 40%;
   /* width: 200px; */
-  /* height: 150px; */
+  height: 100px;
   color: white;
   border-radius: 0 5px 5px 0;
   background-color: rgb(36, 182, 36);
@@ -25,15 +25,12 @@
 }
 
 #mySidenav button:hover {
-  width: 200px;
-  height: 150px;
-  left: 0; /* On mouse-over, make the elements appear as they should */
 }
 
-.vertText {
+/* .vertText {
   vertical-align: top;
   transform: rotate(7deg);
   -ms-transform: rotate(90deg); /* IE 9 */
-  -moz-transform: rotate(90deg); /* Firefox */
-  -webkit-transform: rotate(90deg);
-}
+/*-moz-transform: rotate(90deg); /* Firefox */
+/*-webkit-transform: rotate(90deg);
+} */
