--- a/client/src/App.css
+++ b/client/src/App.css
@@ -42,6 +42,7 @@
   background-color: rgba(192, 192, 192, 0.68);
   border: 3px solid black;
   height: 100%;
+  z-index: 1;
 }
 
 .portfolio-link {
