--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,38 +3,9 @@
   height: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
   }
 }
 
@@ -63,6 +34,71 @@
   border: 2px solid teal;
 }
 
-/* .icons {
-  margin: 15px !important;
-} */
+.rotatingText {
+  font-family: "Arial", "sans-serif";
+  font-size: 24px;
+  text-align: center;
+  font-style: italic;
+}
+
+.rotatingText-adjective {
+  font-family: "Open-sans", "sans-serif";
+  font-size: 40px;
+  font-weight: 600;
+  text-align: center;
+  text-transform: uppercase;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0px;
+  margin-bottom: 0;
+  margin-top: 30px;
+  opacity: 0;
+}
+
+@keyframes rotate {
+  0% {
+    opacity: 0;
+    animation-timing-function: ease-in;
+  }
+
+  8%,
+  16% {
+    opacity: 1;
+    height: 60px;
+  }
+
+  30% {
+    opacity: 0;
+    height: 60px;
+  }
+
+  100% {
+    opacity: 0;
+    animation-timing-function: ease-out;
+  }
+}
+
+.rotatingText-1 {
+  animation-name: rotate;
+  animation-duration: 15s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  /* animation-delay: 0s; */
+}
+
+.rotatingText-adjective:nth-of-type(2) {
+  animation-delay: 3s;
+}
+
+.rotatingText-adjective:nth-of-type(3) {
+  animation-delay: 6s;
+}
+
+.rotatingText-adjective:nth-of-type(4) {
+  animation-delay: 9s;
+}
+
+.rotatingText-adjective:nth-of-type(5) {
+  animation-delay: 12s;
+}
