--- a/client/src/components/Nav/style.css
+++ b/client/src/components/Nav/style.css
@@ -1,47 +1,45 @@
-
-
 .navbar {
-    display: flex;
-    /* justify-content: center; */
-    align-items: center;
-    border-radius: 4px;
-    /* background-color: #eceff1; */
-    border-bottom: 3px solid rgba(255,255,255,.5);
-  }
-  
-  .navbar__link {
-    margin: .5em;
-    font-size: 1.5em;
-    font-family: 'Roboto', sans-serif;
-    cursor: pointer;
-    text-decoration: none;
-    letter-spacing: .3em;
-    text-indent: .3em;
-    color: #181818;
-    border-bottom: 3px solid transparent;
-  }
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
+  border-radius: 4px;
+  /* background-color: #eceff1; */
+  border-bottom: 3px solid rgba(255, 255, 255, 0.5);
+}
 
-  .navbar__button {
-    margin: .5em;
-    font-size: 1em;
-    font-family: 'Roboto', sans-serif;
-    cursor: pointer;
-    text-decoration: none;
-    letter-spacing: .2em;
-    text-indent: .3em;
-    color: #181818;
-    border-bottom: 3px solid transparent;
-    float: right;
-  }
-  
-  .navbar__link:hover {
-    transform: translateY(-2px);
-    background-color: rgba(255,255,0,.5);
-    color: black;
-    font-weight: bold;
-  }
-  
-  .navbar__link--active {
-    border-bottom: 3px solid #29b6f6;
-    transition: border-bottom .5s ease-in-out;
-  }
+.navbar__link {
+  margin: 0.5em;
+  font-size: 1.5em;
+  font-family: "Roboto", sans-serif;
+  cursor: pointer;
+  text-decoration: none;
+  letter-spacing: 0.3em;
+  text-indent: 0.3em;
+  color: white;
+  border-bottom: 3px solid transparent;
+}
+
+.navbar__button {
+  margin: 0.5em;
+  font-size: 1em;
+  font-family: "Roboto", sans-serif;
+  cursor: pointer;
+  text-decoration: none;
+  letter-spacing: 0.2em;
+  text-indent: 0.3em;
+  color: #181818;
+  border-bottom: 3px solid transparent;
+  float: right;
+}
+
+.navbar__link:hover {
+  transform: translateY(-2px);
+  background-color: rgba(255, 255, 0, 0.5);
+  color: black;
+  font-weight: bold;
+}
+
+.navbar__link--active {
+  border-bottom: 3px solid #29b6f6;
+  transition: border-bottom 0.5s ease-in-out;
+}
