--- a/client/src/components/SideNav/style.css
+++ b/client/src/components/SideNav/style.css
@@ -6,9 +6,9 @@
   top: 40%;
   /* width: 200px; */
   height: 50px;
-  color: blue;
+  color: white;
   border-radius: 5px;
-  background-color: rgb(5, 22, 180);
+  background-color: rgba(255, 255, 255);
   /* writing-mode: vertical-rl;
   text-orientation: mixed; */
   vertical-align: top;
@@ -40,7 +40,7 @@
   transform: rotate(270deg) scale(1.5);
   left: -65px;
   cursor: pointer;
-  color: white;
+  color: rgb(5, 22, 180);
   letter-spacing: 0.15em;
   text-indent: 0.3em;
   margin: 0.2em;
