--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,8 +9,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url(./images/IMG_9209.JPG);
-  background-size: cover;
+  background: linear-gradient(rgb(6, 22, 168), rgba(128, 128, 128));
   padding-bottom: 30px;
 }
 
