--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,10 +4,15 @@
 }
 
 .content {
-  background-color: rgba(192, 192, 192, 0.68);
-  border: 3px solid black;
+  background-color: rgba(0, 0, 0);
+  color: rgba(255, 255, 255);
   height: 100%;
   z-index: 1;
+}
+
+.card-text {
+  margin: 2px !important;
+  padding: 2px !important;
 }
 
 .portfolio-link {
