fixed about me to be set-up for max-wdth laptop size, need to trouble shoot footer for mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,10 +3,25 @@
   height: 100%;
 }
 
+/* .about-me-container {
+  width: 100%;
+  background: radial-gradient(
+    closest-side,
+    rgba(0, 0, 0) 75%,
+    rgba(6, 22, 168)
+  );
+  /* linear-gradient(336deg, rgba(6, 22, 168), rgba(0, 0, 0)), */
+/* linear-gradient(127deg, rgba(6, 22, 168), rgba(0, 0, 0)); */
+/* background: linear-gradient(rgba(6, 22, 168), rgba(0, 0, 0)); */
+/* } */
+
 .content {
   background-color: rgba(0, 0, 0);
+  border-radius: 25px;
   color: rgba(255, 255, 255);
-  height: 100%;
+  /* height: 30%; */
+  width: 75%;
+  /* height: 100%; */
   z-index: 1;
 }
 
