--- a/client/src/App.css
+++ b/client/src/App.css
@@ -96,7 +96,7 @@
 
 .rotatingText-1 {
   animation-name: rotate;
-  animation-duration: 15s;
+  animation-duration: 18s;
   animation-timing-function: linear;
   animation-iteration-count: infinite;
   /* animation-delay: 0s; */
@@ -116,6 +116,10 @@
 
 .rotatingText-adjective:nth-of-type(5) {
   animation-delay: 12s;
+}
+
+.rotatingText-adjective:nth-of-type(6) {
+  animation-delay: 15s;
 }
 
 @media screen and (min-width: 768px) {
