--- a/client/src/App.css
+++ b/client/src/App.css
@@ -48,6 +48,16 @@
   border: 2px solid teal;
 }
 
+#rotatingTextButton {
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+}
+
 .rotatingText {
   font-family: "Arial", "sans-serif";
   font-size: 24px;
