--- a/client/src/index.css
+++ b/client/src/index.css
@@ -22,3 +22,8 @@ p {
   font-family: "Helvetica", "sans-serif";
   font-size: 17px;
 }
+
+.portfolio-table__UL-fontSize {
+  font-size: 10px;
+  width: 100%;
+}
