--- a/client/src/index.css
+++ b/client/src/index.css
@@ -27,3 +27,9 @@ p {
   font-size: 10px;
   width: 100%;
 }
+
+.portfolio-card__horizontal-tech {
+  padding: 5px;
+  font-family: "Roboto", "sans-serif";
+  font-size: 12px;
+}
