added @media screen to app.css to remove email in footer at small screen width

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -148,3 +148,12 @@
     margin-bottom: 0;
   }
 }
+
+@media screen and (max-width: 740px) {
+  .footer__email-text {
+    visibility: hidden;
+  }
+  .icons-footer__email-large-width {
+    visibility: hidden;
+  }
+}
